--- a/index.html
+++ b/index.html
@@ -369,7 +369,7 @@
         <div class="runcode-wrapper">
           <main class="runcode-table">
             <section class="runcode__header">
-              <h1><i class="fa-brands fa-java"></i>Run Java Code</h1>
+              <h1 style="font-size: 35px;"><i class="fa-solid fa-laptop-code" style="font-size: 32px; margin-right: 19px;"></i>Run Java Code</h1>
             </section>
             <section class="runcode__body">
               <table>
