Additional site info
media size changes removed

--- a/index.html
+++ b/index.html
@@ -38,14 +38,18 @@
     <div class="main-content">
       <div id="info" style="display: none;">
         <div class="info-wrapper">
-            <div class="about-info" style="margin-top: 250px;">
+            <div class="about-info">
               <p>
-                <i class="fa-brands fa-java"></i> Java Basics Guide by: G5 Test
+                <i class="fa-brands fa-java"></i> Java Basics Guide by: G5
               </p>
           </div>
 
-            <div class="about-info2" style="margin-top: -400px;">
-                <p style="font-size: 16px;">(If the site looks weird zoom out to 80% - ctrl+scrolldown. Screen size compatibility issue.)</p>
+            <div class="about-info2" style="margin-top: 30px;">
+                <p style="font-size: 18px;"><i class="fa-solid fa-circle-info"></i></h1>If the site looks weird and broken zoom out to 80% 
+                  - ctrl+scrolldown. Screen size compatibility issue.
+                  <br>
+                  <br><i class="fa-solid fa-circle-info"></i></h1>Currently working on the mobile version, 
+                  might fix everything wrong with this site, planning to finish <br>properly finish this project in the future.</p>           
           </div>
         </div>
       </div>
