Site info actually talks about the website

--- a/index.html
+++ b/index.html
@@ -38,21 +38,70 @@
     <div class="main-content">
       <div id="info" style="display: none;">
         <div class="info-wrapper">
-            <div class="about-info">
-              <p>
-                <i class="fa-brands fa-java"></i> Java Basics Guide by: G5
-              </p>
-          </div>
+          <main class="infotable">
+            <section class="infotable__header">
+              <h1><i class="fa-brands fa-java"></i></i></i>Java Study Website Information:</h1>
+            </section>
+            <section class="infotable__body">
+              <table>
+                <thead>
+                  <tr>
+                    <th style="font-size: 22px;"><i class="fa-solid fa-triangle-exclamation" style="font-size: 22px;"></i>IMPORTANT!:</th>
+                  </tr>
+                </thead>
+                <tbody>
+                  <tr>
+                    <td><i class="fa-solid fa-circle-info"></i>Please participate in the pre-survey before going to the main content. It's at the research survey tab under chapter review.</td>
+                  </tr>
+                  <tr>
+                    <td><i class="fa-solid fa-circle-info"></i>If the site looks weird and broken zoom out to 80% - ctrl+scrolldown. Screen size compatibility issue.</td>
+                  </tr>
+                  
+                  <thead>
+                    <tr>
+                      <th style="font-size: 22px;"><i class="fa-solid fa-clipboard-question" style="font-size: 22px;"></i>Questions & Answers:</th>
+                    </tr>
+                  </thead>
 
-            <div class="about-info2" style="margin-top: 30px;">
-                <p style="font-size: 18px;"><i class="fa-solid fa-circle-info"></i></h1>If the site looks weird and broken zoom out to 80% 
-                  - ctrl+scrolldown. Screen size compatibility issue.
-                  <br>
-                  <br><i class="fa-solid fa-circle-info"></i></h1>Currently working on the mobile version, 
-                  might fix everything wrong with this site, planning to finish <br>properly finish this project in the future.</p>           
+                  <tr>
+                    <td><i class="fa-solid fa-circle-info"></i>Is this website mobile compatible? NO, I don't know how to make good websites, but I'm currently making a mobile version.</td>
+                  </tr>
+
+                  <tr>
+                    <td>
+                      <i class="fa-solid fa-circle-info"></i>What's the website content/curriculum? It's the resources and materials I used to learn Java basics, it was effective for me.
+                    </td>
+                  </tr>
+
+                  <tr>
+                    <td>
+                      <i class="fa-solid fa-circle-info"></i>Why didn't I make and record the Java lesson videos myself? Too much effort, also these guys explain the topics way better than me.
+                    </td>
+                  </tr>
+
+                  <tr>
+                    <td>
+                      <i class="fa-solid fa-circle-info"></i>How is this website different from any other website? The content in this site are specifically the topics in our class at AMACC.
+                  </tr>
+
+                  <tr>
+                    <td>
+                      <i class="fa-solid fa-circle-info"></i>Why did we choose to make a website instead of the Java app originally planned? Don't know.
+                    </td>
+                  </tr>
+
+                  <tr>
+                    <td>
+                      <i class="fa-solid fa-circle-info"></i>Where's light mode? Not implemented yet, also ew.</p> 
+                    </td>
+                  </tr>
+                  
+                </tbody>
+              </table>
+            </section>
+          </main>
           </div>
         </div>
-      </div>
 
       <!---------------------- topics ---------------------->
       <div id="topics" style="display: none;">
