Updated website information

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8">
-    <title>G5RSCH | Java Basics Guide</title>
+    <title>Java Study Website - Home </title>
     <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta property="og:title" content="G5RSCH | Java Basics Guide">
     <meta property="og:description" content="A comprehensive guide to Java basics.">
@@ -40,13 +40,13 @@
         <div class="info-wrapper">
           <main class="infotable">
             <section class="infotable__header">
-              <h1><i class="fa-brands fa-java"></i></i></i>Java Study Website Information:</h1>
+              <h1><i class="fa-brands fa-java"></i></i></i>Java Study Website Infodump:</h1>
             </section>
             <section class="infotable__body">
               <table>
                 <thead>
                   <tr>
-                    <th style="font-size: 22px;"><i class="fa-solid fa-triangle-exclamation" style="font-size: 22px;"></i>IMPORTANT!:</th>
+                    <th style="font-size: 25px;"><i class="fa-solid fa-triangle-exclamation" style="font-size: 23px; margin-top: 12px;"></i>IMPORTANT!:</th>
                   </tr>
                 </thead>
                 <tbody>
@@ -59,7 +59,7 @@
                   
                   <thead>
                     <tr>
-                      <th style="font-size: 22px;"><i class="fa-solid fa-clipboard-question" style="font-size: 22px;"></i>Questions & Answers:</th>
+                      <th style="font-size: 25px;"><i class="fa-solid fa-clipboard-question" style="font-size: 23px;"></i>Questions & Answers:</th>
                     </tr>
                   </thead>
 
@@ -69,13 +69,7 @@
 
                   <tr>
                     <td>
-                      <i class="fa-solid fa-circle-info"></i>What's the website content/curriculum? It's the resources and materials I used to learn Java basics, it was effective for me.
-                    </td>
-                  </tr>
-
-                  <tr>
-                    <td>
-                      <i class="fa-solid fa-circle-info"></i>Why didn't I make and record the Java lesson videos myself? Too much effort, also these guys explain the topics way better than me.
+                      <i class="fa-solid fa-circle-info"></i>What's the website content/curriculum? It's what I used to learn and understand Java basics for class (with extra added content).
                     </td>
                   </tr>
 
@@ -86,13 +80,7 @@
 
                   <tr>
                     <td>
-                      <i class="fa-solid fa-circle-info"></i>Why did we choose to make a website instead of the Java app originally planned? Don't know.
-                    </td>
-                  </tr>
-
-                  <tr>
-                    <td>
-                      <i class="fa-solid fa-circle-info"></i>Where's light mode? Not implemented yet, also ew.</p> 
+                      <i class="fa-solid fa-circle-info"></i>Where's light mode? Not implemented yet.</p> 
                     </td>
                   </tr>
                   
@@ -453,7 +441,7 @@
                     </th>
                   </thead>
                   <tr>
-                    <td id="notedescription"><br>Please take this google forms survey before going through the "Java Basics Guide" </td>
+                    <td id="notedescription"><br style="margin-top: 3px;">Please participate in this survey before going through the study website.</td>
                   </tr>
                 </tbody>
               </table>
@@ -472,7 +460,7 @@
                         </th>
                       </thead>
                       <tr>
-                        <td id="notedescription"><br>Please take this google forms survey after finishing the "Java Basics Guide" </td>
+                        <td id="notedescription"><br style="margin-top: 3px;">Please participate in this survey after going through the study website. </td>
                       </tr>
                     </tbody>
                   </table>
