--- a/index.html
+++ b/index.html
@@ -34,9 +34,15 @@
     <div class="main-content">
       <div id="info" style="display: none;">
         <div class="info-wrapper">
-         
+          <div class="infotext-wrapper">
+            <div class="about-info">
+              <p>
+                <i class="fa-brands fa-java"></i> Java Basics Guide by: G5<br>
+              </p>
+            </div>
           </div>
         </div>
+      </div>
 
       <!---------------------- topics ---------------------->
       <div id="topics" style="display: none;">
